--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,3 @@
 {
-    "python.analysis.typeCheckingMode": "basic",
-    "python.testing.unittestArgs": [
-        "-v",
-        "-s",
-        "./app",
-        "-p",
-        "test_*.py"
-    ],
-    "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestArgs": [
-        "app"
-    ]
+    "python.analysis.typeCheckingMode": "basic"
 }
