--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,84 @@
-libraries/tools contained in FastAPI required for AgMoProject REST API
+libraries/tools required for AgMoProject REST API
+
 
 anyio==3.6.2
+asttokens==2.2.1
+attrs==22.2.0
 autopep8==2.0.1
+backcall==0.2.0
+bcrypt==4.0.1
 certifi==2022.12.7
+charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+comm==0.1.3
+debugpy==1.6.6
+decorator==5.1.1
 dnspython==2.3.0
 email-validator==1.3.1
+executing==1.2.0
+Faker==18.3.1
 fastapi==0.89.1
+future==0.18.3
+greenlet==2.0.2
+gunicorn==20.1.0
 h11==0.14.0
 httpcore==0.16.3
 httptools==0.5.0
 httpx==0.23.3
 idna==3.4
+iniconfig==2.0.0
+ipykernel==6.22.0
+ipython==8.11.0
+iso8601==1.1.0
 itsdangerous==2.1.2
+jedi==0.18.2
 Jinja2==3.1.2
+jupyter_client==8.1.0
+jupyter_core==5.3.0
 MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
 orjson==3.8.5
+packaging==23.0
+parso==0.8.3
+passlib==1.7.4
+pickleshare==0.7.5
+platformdirs==3.2.0
+pluggy==1.0.0
+prompt-toolkit==3.0.38
+psutil==5.9.4
+pure-eval==0.2.2
 pycodestyle==2.10.0
 pydantic==1.10.4
+Pygments==2.14.0
+PyQt5==5.15.9
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.1
+pytest==7.2.2
+pytest-mock==3.10.0
+python-dateutil==2.8.2
 python-dotenv==0.21.1
 python-multipart==0.0.5
+pywin32==306
 PyYAML==6.0
+pyzmq==25.0.2
+requests==2.28.2
+responses==0.23.1
 rfc3986==1.5.0
+serial==0.0.97
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.3
+stack-data==0.6.2
 starlette==0.22.0
+tornado==6.2
+traitlets==5.9.0
+types-PyYAML==6.0.12.8
 typing_extensions==4.4.0
 ujson==5.7.0
+urllib3==1.26.15
 uvicorn==0.20.0
 watchfiles==0.18.1
+wcwidth==0.2.6
 websockets==10.4
